--- a/src/neumorphic-toolkit/index.pug
+++ b/src/neumorphic-toolkit/index.pug
@@ -2,5 +2,6 @@ extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
   script(src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.min.js')
+  script(src='https://unpkg.com/scroll-out/dist/scroll-out.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/react/16.12.0/umd/react.production.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.11.0/umd/react-dom.production.min.js')
