fix: newtons light bulb fixes

--- a/src/newtons-light-bulb/style.styl
+++ b/src/newtons-light-bulb/style.styl
@@ -121,3 +121,20 @@ svg
         --bulb-hue 300
       .light-bulb--6
         --bulb-hue 360
+
+  &:nth-of-type(4)
+    right 4rem
+
+    &:checked ~ .wrapper svg
+      .light-bulb--1
+        --bulb-hue 10
+      .light-bulb--2
+        --bulb-hue 20
+      .light-bulb--3
+        --bulb-hue 30
+      .light-bulb--4
+        --bulb-hue 40
+      .light-bulb--5
+        --bulb-hue 50
+      .light-bulb--6
+        --bulb-hue 60
