--- a/src/neumorphic-toolkit/style.styl
+++ b/src/neumorphic-toolkit/style.styl
@@ -20,9 +20,62 @@ section
   justify-content center
   overflow auto
   width 100%
+  position relative
 
 #app
   position relative
+
+  & > a
+    --neumorphic-reach 10
+    --neumorphic-blur 15
+    --neumorphic-intensity 0.75
+    --default 'hsl(%s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc(var(--lightness) * 1%))
+    --dark 'hsla(%s, %s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) - 15) * 1%) var(--neumorphic-intensity))
+    --light 'hsla(%s, %s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) + 15) * 1%) var(--neumorphic-intensity))
+    --x calc(var(--neumorphic-reach) * 1px)
+    --y calc(var(--neumorphic-reach) * 1px)
+    --blur calc(var(--neumorphic-blur) * 1px)
+    --x2 calc(var(--neumorphic-reach) * -1px)
+    --y2 calc(var(--neumorphic-reach) * -1px)
+    box-shadow '%s %s %s %s,
+      %s %s %s %s' % (var(--x) var(--y) var(--blur) var(--dark) var(--x2) var(--y2) var(--blur) var(--light))
+    position absolute
+    top 50%
+    height 44px
+    width 44px
+    background var(--default)
+    border-radius 50%
+    font-size 0
+
+
+    &:visited path
+    path
+      fill var(--dark)
+
+    &:hover path
+    &:focus path
+      fill var(--light)
+
+    &:active
+        border 4px solid white
+        path
+          fill white
+
+    &:not([href])
+      border 0
+      cursor not-allowed
+      path
+        fill var(--dark)
+
+    &:nth-of-type(1)
+      left 100%
+      transform translate(50%, -50%)
+    &:nth-of-type(2)
+      right 100%
+      transform translate(-50%, -50%)
+
+      svg
+        transform rotate(180deg)
 
 main
   --neumorphic-reach 30
@@ -68,11 +121,17 @@ footer
     font-size 0
     display block
     position relative
+    transition background .1s ease
+
+    &:hover:not(.active)
+      background 'radial-gradient(circle at 50% 50%, hsl(%s, %s, %s) 20%, transparent 25%)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) + 10) * 1%))
 
     &:after
       --neumorphic-reach 4
       --neumorphic-blur 8
       --neumorphic-intensity 0.25
+      --dark 'hsla(%s, %s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) - 15) * 1%) var(--neumorphic-intensity))
+      --light 'hsla(%s, %s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) + 15) * 1%) var(--neumorphic-intensity))
       --x calc(var(--neumorphic-reach) * 1px)
       --y calc(var(--neumorphic-reach) * 1px)
       --blur calc(var(--neumorphic-blur) * 1px)
@@ -86,8 +145,8 @@ footer
       left 50%
       transform translate(-50%, -50%)
       border-radius 50%
-      box-shadow '%s %s %s hsla(%s, %s, %s, %s) inset,
-        %s %s %s hsla(%s, %s, %s, %s) inset' % (var(--x) var(--y) var(--blur) var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) - 15) * 1%) var(--neumorphic-intensity) var(--x2) var(--y2) var(--blur) var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) + 15) * 1%) var(--neumorphic-intensity))
+      box-shadow '%s %s %s %s inset,
+        %s %s %s %s inset' % (var(--x) var(--y) var(--blur) var(--dark) var(--x2) var(--y2) var(--blur) var(--light))
 
 
 article
@@ -114,12 +173,13 @@ header
   z-index -1
 
 h1
-  color 'hsl(%s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) - 50) * 1%))
-  position fixed
+  color 'hsla(%s, %s, %s, 0.25)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) - 50) * 1%))
+  position absolute
   z-index 2
-  bottom 100%
-  left 50%
-  transform translate(-50%, -100%)
+  font-weight bold
+  bottom 5%
+  right 5%
+  // transform translate(-50%, -100%)
 
 label
   color 'hsl(%s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) - 50) * 1%))
@@ -127,126 +187,50 @@ label
 @supports(-webkit-appearance: none)
   input[type='checkbox']
   input[type='radio']
-    --active red
-    --active-inner #fff
-    --focus 2px rgba(39, 94, 254, .3)
-    --border #BBC1E1
-    --border-hover #275EFE
-    --background #fff
-    --disabled #F6F8FF
-    --disabled-inner #E1E6F9
+    --default 'hsl(%s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc(var(--lightness) * 1%))
+    --light 'hsl(%s, %s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) + 20) * 1%) var(--neumorphic-intensity))
+    --dark 'hsl(%s, %s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) - 20) * 1%) var(--neumorphic-intensity))
+    --x calc(var(--neumorphic-reach) * 1px)
+    --y calc(var(--neumorphic-reach) * 1px)
+    --blur calc(var(--neumorphic-blur) * 1px)
+    --x2 calc(var(--neumorphic-reach) * -1px)
+    --y2 calc(var(--neumorphic-reach) * -1px)
+    --size 36
     -webkit-appearance none
-    height 21px
+    height calc(var(--size) * 1px)
     outline none
-    display inline-block
-    vertical-align top
-    position relative
     margin 0
+    box-shadow '%s %s %s %s inset,
+      %s %s %s %s inset' % (var(--x) var(--y) var(--blur) var(--dark) var(--x2) var(--y2) var(--blur) var(--light))
     cursor pointer
-    border 1px solid var(--bc, var(--border))
-    background var(--b, var(--background))
-    transition background .3s, border-color .3s, box-shadow .2s
-
-    &:after
-      content ''
-      display block
-      left 0
-      top 0
-      position absolute
-      transition transform var(--d-t, .3s) var(--d-t-e, ease), opacity var(--d-o, .2s)
+    border-style solid
+    border-color white
+    border-radius calc(var(--border-radius) * 1px)
+    border-width calc(var(--border-width) * 1px)
+    background var(--default)
+    transition box-shadow .1s
+    width calc(var(--size) * 1px)
 
     &:checked
-      --b var(--active)
-      --bc var(--active)
-      --d-o .3s
-      --d-t .6s
-      --d-t-e cubic-bezier(.2, .85, .32, 1.2)
+      background 'radial-gradient(circle at center center, white 25%, transparent 25%), %s' % (var(--default))
 
-    &:disabled
-      --b var(--disabled)
-      cursor not-allowed
-      opacity .9
+    &:checked + label
+      font-weight bold
 
-      &:checked
-        --b var(--disabled-inner)
-        --bc var(--border)
-
-      & + label
-        cursor not-allowed
+  input[type=radio]
+    box-shadow '%s %s %s %s,
+      %s %s %s %s' % (var(--x) var(--y) var(--blur) var(--dark) var(--x2) var(--y2) var(--blur) var(--light))
 
     &:hover
-      &:not(:checked)
-        &:not(:disabled)
-          --bc var(--border-hover)
-
-    &:focus
-      box-shadow 0 0 0 var(--focus)
-
-    &:not(.switch)
-      width 21px
-      &:after
-        opacity var(--o, 0)
-
-      &:checked
-        --o 1
-
-    & + label
-      font-size 14px
-      line-height 21px
-      display inline-block
-      vertical-align top
-      cursor pointer
-      margin-left 4px
-
-  input[type='checkbox']
-    &:not(.switch)
-      border-radius 7px
-      &:after
-        width 5px
-        height 9px
-        border 2px solid var(--active-inner)
-        border-top 0
-        border-left 0
-        left 7px
-        top 4px
-        transform rotate(var(--r, 20deg))
-
-      &:checked
-        --r 43deg
-
-    &.switch
-      width 38px
-      border-radius 11px
-      &:after
-        left 2px
-        top 2px
-        border-radius 50%
-        width 15px
-        height 15px
-        background var(--ab, var(--border))
-        transform translateX(var(--x, 0))
-
-      &:checked
-        --ab var(--active-inner)
-        --x 17px
-
-      &:disabled
-        &:not(:checked)
-          &:after
-            opacity .6
-
-  input[type='radio']
-    border-radius 50%
-    &:after
-      width 19px
-      height 19px
-      border-radius 50%
-      background var(--active-inner)
-      opacity 0
-      transform scale(var(--s, .7))
+      --x calc(var(--neumorphic-reach) * 2px)
+      --y calc(var(--neumorphic-reach) * 2px)
+      --blur calc(var(--neumorphic-blur) * 2px)
+      --x2 calc(var(--neumorphic-reach) * -2px)
+      --y2 calc(var(--neumorphic-reach) * -2px)
 
     &:checked
-      --s .5
+      box-shadow '%s %s %s %s inset,
+        %s %s %s %s inset' % (var(--x) var(--y) var(--blur) var(--dark) var(--x2) var(--y2) var(--blur) var(--light))
 
   // Range
   input[type=range]
@@ -296,7 +280,7 @@ label
     &:hover
       border-color 'hsla(%s, %s, %s, 1)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) - 20) * 1%))
     &:active
-      border-color 'hsla(%s, %s, %s, 1)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) + 20) * 1%))
+      border-color white
 
   input[type=range]::-moz-range-thumb
     --light 'hsl(%s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) + 20) * 1%))
@@ -316,7 +300,7 @@ label
     &:hover
       border-color 'hsla(%s, %s, %s, 1)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) - 20) * 1%))
     &:active
-      border-color 'hsla(%s, %s, %s, 1)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) + 20) * 1%))
+      border-color white
 
   input[type=range]::-ms-thumb
     --light 'hsl(%s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) + 20) * 1%))
@@ -336,7 +320,7 @@ label
     &:hover
       border-color 'hsla(%s, %s, %s, 1)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) - 20) * 1%))
     &:active
-      border-color 'hsla(%s, %s, %s, 1)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) + 20) * 1%))
+      border-color white
 
   input[type=range]::-webkit-slider-runnable-track
     --x calc(var(--neumorphic-reach) * 1px)
@@ -501,9 +485,15 @@ label
   .buttons
   .texts
   .ranges
+  .checkboxes
+  .radios
     display grid
     grid-gap calc(var(--margin) * 4px)
     width 30vmin
+
+  .radios
+  .checkboxes
+    width auto
 
   .input
     align-items center
@@ -512,19 +502,23 @@ label
     grid-gap 1rem
 
   // Label highlights for accentuating focus
-  .input:focus-within label
-    font-weight bold
+  .texts
+  .ranges
 
-  .input:nth-of-type(1)
-    --highlight 'hsl(%s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) + 20) * 1%))
+    .input
+      &:focus-within label
+        font-weight bold
 
-  .input:nth-of-type(2)
-    --highlight 'hsl(%s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) - 20) * 1%))
+      &:nth-of-type(1)
+        --highlight 'hsl(%s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) + 20) * 1%))
 
-  .input:nth-of-type(3)
-    &:focus-within label
-      color 'hsl(%s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) + 20) * 1%))
-    --highlight transparent
+      &:nth-of-type(2)
+        --highlight 'hsl(%s, %s, %s)' % (var(--hue) calc(var(--saturation) * 1%) calc((var(--lightness) - 20) * 1%))
+
+      &:nth-of-type(3)
+        &:focus-within label
+          color white
+        --highlight transparent
 
   .ranges .input
     &:nth-of-type(1)
@@ -582,3 +576,83 @@ label
         &:active
           --dot-alpha 1
           --thumb-angle -45
+
+  .checkboxes .input
+    input
+      &:focus + label
+        font-weight bold
+      transition all .1s ease
+    &:nth-of-type(1)
+      input
+        box-shadow '%s %s %s %s,
+          %s %s %s %s' % (var(--x) var(--y) var(--blur) var(--dark) var(--x2) var(--y2) var(--blur) var(--light))
+
+        &:hover
+          --x calc(var(--neumorphic-reach) * 2px)
+          --y calc(var(--neumorphic-reach) * 2px)
+          --x2 calc(var(--neumorphic-reach) * -2px)
+          --y2 calc(var(--neumorphic-reach) * -2px)
+
+        &:focus + label
+          font-weight bold
+        &:hover
+          background 'radial-gradient(circle at center center, hsla(0, 0%, 100%, 0.5) 25%, transparent 25%), %s' % (var(--default))
+        &:checked
+          background 'radial-gradient(circle at center center, hsla(0, 0%, 100%, 1) 25%, transparent 25%), %s' % (var(--default))
+          box-shadow '%s %s %s %s inset,
+            %s %s %s %s inset' % (var(--x) var(--y) var(--blur) var(--dark) var(--x2) var(--y2) var(--blur) var(--light))
+
+    &:nth-of-type(2)
+      input
+        &:hover
+        &:focus
+          --x calc(var(--neumorphic-reach) * 2px)
+          --y calc(var(--neumorphic-reach) * 2px)
+          --x2 calc(var(--neumorphic-reach) * -2px)
+          --y2 calc(var(--neumorphic-reach) * -2px)
+        &:hover
+          background 'radial-gradient(circle at center center, hsla(0, 0%, 100%, 0.5) 25%, transparent 25%), %s' % (var(--default))
+        &:checked
+          --neumorphic-intensity 1
+          background 'radial-gradient(circle at center center, hsla(0, 0%, 100%, 1) 25%, %s 25%), %s' % (var(--dark) var(--default))
+          box-shadow none
+
+  .radios .input
+    input
+      &:focus + label
+        font-weight bold
+      transition all .1s ease
+    &:nth-of-type(1)
+      input
+        box-shadow '%s %s %s %s,
+          %s %s %s %s' % (var(--x) var(--y) var(--blur) var(--dark) var(--x2) var(--y2) var(--blur) var(--light))
+
+        &:hover
+          --x calc(var(--neumorphic-reach) * 2px)
+          --y calc(var(--neumorphic-reach) * 2px)
+          --x2 calc(var(--neumorphic-reach) * -2px)
+          --y2 calc(var(--neumorphic-reach) * -2px)
+
+        &:focus + label
+          font-weight bold
+        &:hover
+          background 'radial-gradient(circle at center center, hsla(0, 0%, 100%, 0.5) 25%, transparent 25%), %s' % (var(--default))
+        &:checked
+          background 'radial-gradient(circle at center center, hsla(0, 0%, 100%, 1) 25%, transparent 25%), %s' % (var(--default))
+          box-shadow '%s %s %s %s inset,
+            %s %s %s %s inset' % (var(--x) var(--y) var(--blur) var(--dark) var(--x2) var(--y2) var(--blur) var(--light))
+
+    &:nth-of-type(2)
+      input
+        &:hover
+        &:focus
+          --x calc(var(--neumorphic-reach) * 2px)
+          --y calc(var(--neumorphic-reach) * 2px)
+          --x2 calc(var(--neumorphic-reach) * -2px)
+          --y2 calc(var(--neumorphic-reach) * -2px)
+        &:hover
+          background 'radial-gradient(circle at center center, hsla(0, 0%, 100%, 0.5) 25%, transparent 25%), %s' % (var(--default))
+        &:checked
+          --neumorphic-intensity 1
+          background 'radial-gradient(circle at center center, hsla(0, 0%, 100%, 1) 25%, %s 25%), %s' % (var(--dark) var(--default))
+          box-shadow none
