--- a/src/care-bear/style.styl
+++ b/src/care-bear/style.styl
@@ -10,6 +10,7 @@ body
   display flex
   align-items center
   justify-content center
+  opacity 0
 
 .heart
   position absolute
@@ -44,6 +45,9 @@ svg
   --size 50
   height calc(var(--size) * 1vmin)
   width calc(var(--size) * 1vmin)
+  z-index 2
+
+span
   z-index 2
 
 .care-bear
